# orbit-mcp

./: Cargo.toml  IMPLEMENTATION.md  README.md  build.rs
.github/workflows/: ci.yml
examples/: simple_agent.rs  vscode_extension.rs
src/: lib.rs  main.rs  server.rs
src/api/: build.rs  components.rs  documentation.rs  mod.rs  projects.rs  testing.rs
src/handlers/: build.rs  components.rs  documentation.rs  mod.rs  projects.rs  testing.rs
src/utils/: error.rs  file_utils.rs  mod.rs
tests/: integration_tests.rs
