[package]
name = "orbit-mcp"
version = "0.1.0"
edition = "2021"
description = "Model Context Protocol (MCP) server for the Orbit Framework"
authors = ["Orbit Framework Team"]
license = "MIT"

[dependencies]
# Core dependencies
tokio = { version = "1.28", features = ["full"] }
futures-util = "0.3.28"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"
clap = { version = "4.2", features = ["derive"] }
console = "0.15"

# Web server dependencies
axum = { version = "0.6", features = ["ws"] }
tower-http = { version = "0.4", features = ["cors", "trace"] }
hyper = { version = "0.14", features = ["full"] }
tokio-tungstenite = "0.20"

# Orbit ecosystem dependencies
orbit = { path = "../orbit" }
orbiton = { path = "../orbiton" }
orlint = { path = "../orlint" }

[dev-dependencies]
tokio-test = "0.4"
